--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,308 +1,123 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
 
 html {
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 section {
-  padding: 2rem 5rem 5rem 3rem;
+    padding: 2rem 5rem 5rem 3rem;
+}
+
+section img {
+    width: 100%;
 }
 
 #header {
-  background-color: transparent;
-  transition: all 0.5s;
+    background-color: transparent;
+    transition: all 0.5s;
 }
 
 .navigation .nav {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
 }
 
+
 .navigation .nav .nav-item a {
-  text-transform: uppercase;
-  margin-left: 2rem;
-  font-size: 1.13rem;
-  font-weight: 600;
-  color: white;
+    text-transform: uppercase;
+    margin-left: 2rem;
+    font-size: 1.13rem;
+    font-weight: 600;
+    color: white;
 }
 
 .navbar .ui-variable-logo .logo-default {
-  display: none;
+    display: none;
 }
 
 .navbar .ui-variable-logo .logo-transparent {
-  display: block
+    display: block
 }
 
 .navbar.nav-scrolled .ui-variable-logo .logo-default {
-  display: block
+    display: block
 }
 
 .navbar.nav-scrolled .ui-variable-logo .logo-transparent {
-  display: none;
+    display: none;
 }
 
 .nav-scrolled {
-  background-color: #fff !important;
-  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    background-color: #fff !important;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
 }
 
 .nav-scrolled .container .navigation .nav-item a {
-  color: #1F6FF1;
+    color: #1F6FF1;
 }
 
 .nav-scrolled .container button {
-  background: #3B96FE;
+    background: #3B96FE;
 }
 
-.bgimage-hero {
-  width: 100%;
-  height: 150vh;
-  background: url(../img/bg-linear/Group\ 1.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
+.hero {
+    /* width: 1222.5px; */
+    /* background:
+        linear-gradient(113.62deg, #2FA3EB 0.16%, #2D9EEC 7.44%, #2073F1 68.75%, #1B63F3 100.13%);
+    height: 828.99px; */
+    height: 828.99px;
+    background: url(../img/bg-linear/Group\ 1.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
 
 .hero-text {
-  /* font-family: Montserrat; */
-  text-align: center;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+    /* font-family: Montserrat; */
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
 .hero-text h2 {
-  padding-bottom: 1rem;
-  font-size: 3.13rem;
-  line-height: 3.81rem;
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
 }
 
-.hero-text p {
-  width: 50rem;
-  font-size: 1.25rem;
-  line-height: 1.5rem;
+@media screen and (min-width: 991px) {
+    .hero-text h2 {
+        padding-bottom: 1rem;
+        font-size: 3.13rem;
+        line-height: 3.81rem;
+    }
+
+    .hero-text p {
+        width: 50rem;
+        font-size: 1.25rem;
+        line-height: 1.5rem;
+    }
 }
 
-.contain-gray h2 {
-  font-size: 2.81rem;
-  color: #a4a4a4;
-  text-align: left;
+.bgimage-features img {
+    width: 100%;
 }
 
-.contain-gray p {
-  margin-top: 1.19rem;
-  text-align: left;
-  font-size: 1.25rem;
-  color: #a4a4a4;
-}
-
-.contain-blue h2 {
-  text-align: right;
-  color: #3752c8;
-  font-size: 2.81rem;
-}
-
-.contain-blue p {
-  color: #4e4e4e;
-  text-align: right;
-  margin-top: 1.75rem;
-  font-size: 1.25rem;
-}
-
-.contain-blue-gray h2 {
-  color: #959595;
-  font-size: 2.63rem;
-  line-height: 3.07rem;
-  text-align: left;
-}
-
-.contain-blue-gray h2:last-of-type {
-  margin-top: 3.13rem;
-  line-height: 2.93rem;
-  color: #3752c8;
-  font-size: 2.5rem;
-}
-
-.contain-blue-gray p {
-  color: #a4a4a4;
-  margin-top: 1.56rem;
-  font-size: 1.25rem;
-  line-height: 2.19rem;
-  text-align: left;
-}
-
-.feature-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-
-.digital-vaccine h6 {
-  color: #417fff;
-  margin-left: 1rem;
-  position: relative;
-  padding-bottom: 0.85rem;
-}
-
-.digital-vaccine h6::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 0.2rem;
-  width: 3.75rem;
-  background-color: #417fff;
-}
-
-.digital-vaccine p {
-  margin-left: 1rem;
-  color: #a4a4a4;
-}
-
-/*
-.gradient-blue {
-  background-color: linear-gradient( 45deg, #2FA3EB 0%, #2D9EEC 15%, #2073F1 70%, #1B63F3 100%);
-} */
-
-.bgimage-features {
-  width: 100%;
-  height: 150vh;
-  background: url(../img/bg-linear/Group\ 2.svg);
-  background-repeat: no-repeat;
-  background-position: cover;
-  background-size: cover;
-  position: relative;
-}
-
-.footer {
-  display: flex;
-  height: 145vh;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.footer h2 {
-  font-size: 3rem;
-  color: #959595;
-}
-
-.footer .bg-form {
-  box-shadow: 2px 6px 13px -3px rgba(0, 0, 0, 0.41);
-  height: 28rem;
-  margin-bottom: 4rem;
-  padding: 1rem;
-  background-color: #fff;
-  border-radius: 1rem;
-}
-
-.footer .bg-form form {
-  padding: 1rem 0;
-  margin: 0 4rem;
-  text-align: center;
-}
-
-.footer .bg-form form input[type="text"],
-.footer .bg-form form textarea {
-  width: 100%;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  border-radius: 0.63rem;
-  margin: 0.3rem;
-  height: 2.81rem;
-  padding: 0.94rem 0 0.94rem 1.06rem;
-}
-
-.footer .bg-form form textarea {
-  height: 7.81rem;
-}
-
-.footer .bg-form form button {
-  background-color: #2175f1;
-  font-size: 1.13rem;
-  color: white;
-  width: 15.44rem;
-  margin-top: 2rem;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  border-radius: 0.63rem;
-}
-
-.footer ul {
-  width: 100%;
-}
-
-.footer li {
-  font-size: 1.8rem;
-}
-
-.footer li a {
-  font-size: 1.13;
-  line-height: 8.81rem;
-  color: #112994;
-}
-
-.footer footer {
-  text-align: center;
-}
-
-.footer footer span {
-  color: #fff;
-  font-size: 1.13rem;
-}
-
-.fade-in {
-  opacity: 0;
-  transition: opacity 250ms ease-in;
-}
-
-.fade-in.appear {
-  opacity: 1;
-}
-
-.from-left {
-  grid-column: 2 / 3;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-.from-right {
-  grid-column: 3 / 4;
-  -webkit-transform: translateX(50%);
-  transform: translateX(50%);
-}
-
-.from-left,
-.from-right {
-  transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
-  transition: opacity 250ms ease-in, transform 400ms ease-in;
-  transition: opacity 250ms ease-in, transform 400ms ease-in,
-    -webkit-transform 400ms ease-in;
-  opacity: 0;
-}
-
-.from-left.appear,
-.from-right.appear {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-  opacity: 1;
-}
