--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,13 +29,16 @@ section img {
     transition: all 0.5s;
 }
 
+/* ============================================= */
+/* ================= Nav bar =================== */
+/* ============================================= */
+
 .navigation .nav {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     width: 100%;
 }
-
 
 .navigation .nav .nav-item a {
     text-transform: uppercase;
@@ -73,6 +76,10 @@ section img {
 .nav-scrolled .container button {
     background: #3B96FE;
 }
+
+/* ========================================== */
+/* ================= Hero =================== */
+/* ========================================== */
 
 .hero {
     /* width: 1222.5px; */
@@ -117,7 +124,192 @@ section img {
     }
 }
 
-.bgimage-features img {
+/* sections */
+
+.contain-gray h2 {
+    color: #a4a4a4;
+}
+
+.contain-gray p {
+    color: #a4a4a4;
+}
+
+.contain-blue h2 {
+    color: #3752c8;
+}
+
+
+.contain-blue p {
+    color: #4e4e4e;
+}
+
+
+.digital-vaccine h6 {
+    color: #417fff;
+}
+
+.contain-blue-gray h2 {
+    color: #959595;
+
+}
+
+.contain-blue-gray h2:last-of-type {
+
+    color: #3752c8;
+
+}
+
+.contain-blue-gray p {
+    color: #a4a4a4;
+
+}
+
+.bgimage-features {
+    width: 100%;
+    height: 828.99px;
+    background: url(../img/bg-linear/Group\ 2.svg);
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: cover;
+    position: relative;
+}
+
+
+
+.feature-text {
+    text-align: center;
+    position: absolute;
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+@media screen and (max-width: 728px) {
+    .bgimage-features img {
+        width: 100%;
+    }
+
+    .feature-text {
+        width: 100%;
+    }
+}
+
+
+
+/* ================================================= */
+/* ===================== Footer ==================== */
+/* ================================================= */
+
+.footer {
+    display: flex;
+    height: 828.99px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer h2 {
+    font-size: 3rem;
+    color: #959595;
+}
+
+.footer .bg-form {
+    box-shadow: 2px 6px 13px -3px rgba(0, 0, 0, 0.41);
+    height: 28rem;
+    margin-bottom: 4rem;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 1rem;
+}
+
+.footer .bg-form form {
+    padding: 1rem 0;
+    margin: 0 4rem;
+    text-align: center;
+}
+
+.footer .bg-form form input[type="text"],
+.footer .bg-form form textarea {
+    width: 100%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 0.63rem;
+    margin: 0.3rem;
+    height: 2.81rem;
+    padding: 0.94rem 0 0.94rem 1.06rem;
+}
+
+.footer .bg-form form button {
+    background-color: #2175f1;
+    font-size: 1.13rem;
+    color: white;
+    width: 15.44rem;
+    margin-top: 2rem;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 0.63rem;
+}
+
+.footer ul {
     width: 100%;
 }
 
+.footer li {
+    font-size: 1.2rem;
+}
+
+
+.footer li a {
+    color: #112994;
+}
+
+.footer footer {
+    text-align: center;
+}
+
+.footer footer span {
+    color: #fff;
+    font-size: 1.13rem;
+}
+
+/* ===================================================== */
+/* ===================== Animations ==================== */
+/* ===================================================== */
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+}
+
+.fade-in.appear {
+    opacity: 1;
+}
+
+@media screen and (min-width: 991px) {
+    .from-left {
+        grid-column: 2 / 3;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+    }
+
+    .from-right {
+        grid-column: 3 / 4;
+        -webkit-transform: translateX(50%);
+        transform: translateX(50%);
+    }
+
+    .from-left,
+    .from-right {
+        transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+        transition: opacity 250ms ease-in, transform 400ms ease-in;
+        transition: opacity 250ms ease-in, transform 400ms ease-in,
+            -webkit-transform 400ms ease-in;
+        opacity: 0;
+    }
+
+    .from-left.appear,
+    .from-right.appear {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
