--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,8 +20,10 @@ section {
     padding: 2rem 5rem 5rem 3rem;
 }
 
-section img {
-    width: 100%;
+@media screen and (max-width: 728px) {
+    section img {
+        width: 100%;
+    }
 }
 
 #header {
