--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
 
+@-ms-viewport {
+    width: device-width;
+}
+
 html {
     box-sizing: border-box;
 }
@@ -126,7 +130,9 @@ section {
     }
 }
 
-/* sections */
+/* ================================================= */
+/* =================== sections ==================== */
+/* ================================================= */
 
 .contain-gray h2 {
     color: #a4a4a4;
@@ -134,6 +140,20 @@ section {
 
 .contain-gray p {
     color: #a4a4a4;
+    text-align: justify;
+}
+
+@media screen and (min-width: 728px) {
+    .contain-gray h2 {
+        font-size: 2.81rem;
+        text-align: left;
+    }
+
+    .contain-gray p {
+        margin-top: 1.19rem;
+        text-align: left;
+        font-size: 1.25rem;
+    }
 }
 
 .contain-blue h2 {
@@ -145,9 +165,18 @@ section {
     color: #4e4e4e;
 }
 
+@media screen and (min-width: 728px) {
+    .contain-blue h2 {
+        text-align: right;
 
-.digital-vaccine h6 {
-    color: #417fff;
+        font-size: 2.81rem;
+    }
+
+    .contain-blue p {
+        text-align: right;
+        margin-top: 1.75rem;
+        font-size: 1.25rem;
+    }
 }
 
 .contain-blue-gray h2 {
@@ -156,15 +185,38 @@ section {
 }
 
 .contain-blue-gray h2:last-of-type {
-
     color: #3752c8;
-
 }
 
 .contain-blue-gray p {
     color: #a4a4a4;
-
 }
+
+@media screen and (min-width: 728px) {
+    .contain-blue-gray h2 {
+        color: #959595;
+        font-size: 2.63rem;
+        line-height: 3.07rem;
+        text-align: left;
+    }
+
+    .contain-blue-gray h2:last-of-type {
+        margin-top: 3.13rem;
+        line-height: 2.93rem;
+        color: #3752c8;
+        font-size: 2.5rem;
+    }
+
+    .contain-blue-gray p {
+        color: #a4a4a4;
+        margin-top: 1.56rem;
+        font-size: 1.25rem;
+        line-height: 2.19rem;
+        text-align: left;
+    }
+}
+
+
 
 .bgimage-features {
     width: 100%;
@@ -177,11 +229,9 @@ section {
 }
 
 
-
 .feature-text {
     text-align: center;
     position: absolute;
-
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -198,7 +248,33 @@ section {
     }
 }
 
+.digital-vaccine h6 {
+    color: #417fff;
+}
 
+@media screen and (min-width: 728px) {
+    .digital-vaccine h6 {
+        color: #417fff;
+        margin-left: 1rem;
+        position: relative;
+        padding-bottom: 0.85rem;
+    }
+
+    .digital-vaccine h6::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 0.2rem;
+        width: 3.75rem;
+        background-color: #417fff;
+    }
+
+    .digital-vaccine p {
+        margin-left: 1rem;
+        color: #a4a4a4;
+    }
+}
 
 /* ================================================= */
 /* ===================== Footer ==================== */
@@ -212,7 +288,7 @@ section {
 }
 
 .footer h2 {
-    font-size: 3rem;
+    font-size: 2rem;
     color: #959595;
 }
 
@@ -225,11 +301,13 @@ section {
     border-radius: 1rem;
 }
 
+
 .footer .bg-form form {
     padding: 1rem 0;
-    margin: 0 4rem;
+    margin: 0 1rem;
     text-align: center;
 }
+
 
 .footer .bg-form form input[type="text"],
 .footer .bg-form form textarea {
@@ -241,6 +319,7 @@ section {
     padding: 0.94rem 0 0.94rem 1.06rem;
 }
 
+
 .footer .bg-form form button {
     background-color: #2175f1;
     font-size: 1.13rem;
@@ -249,6 +328,10 @@ section {
     margin-top: 2rem;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     border-radius: 0.63rem;
+}
+
+.footer .bg-form form textarea {
+    height: 4.81rem;
 }
 
 .footer ul {
@@ -271,6 +354,33 @@ section {
 .footer footer span {
     color: #fff;
     font-size: 1.13rem;
+}
+
+
+@media screen and (min-width: 728px) {
+
+    .footer h2 {
+        font-size: 3rem;
+        color: #959595;
+    }
+
+    .footer .bg-form form {
+        margin: 0 4rem;
+    }
+
+
+    .footer .bg-form form textarea {
+        height: 7.81rem;
+    }
+
+    .footer li {
+        font-size: 1.8rem;
+    }
+
+    .footer li a {
+        font-size: 1.13;
+        line-height: 8.81rem;
+    }
 }
 
 /* ===================================================== */
