--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -425,17 +425,16 @@ form>.col-12:last-child {
 /* ===================================================== */
 
 
-
-/* @media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) {
     .fade-in {
-    opacity: 0;
-    transition: opacity 250ms ease-in;
-}
+        opacity: 0;
+        transition: opacity 250ms ease-in;
+    }
 
-.fade-in.appear {
-    opacity: 1;
-}
-    
+    .fade-in.appear {
+        opacity: 1;
+    }
+
     .from-left {
         grid-column: 2 / 3;
         -webkit-transform: translateX(-50%);
@@ -463,4 +462,4 @@ form>.col-12:last-child {
         transform: translateX(0);
         opacity: 1;
     }
-} */
+}
